--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -299,6 +299,7 @@ h2 {
 
 /* footer */
 footer {
+  margin-top: 20px;
   padding: 5px;
   color: white;
   background-color: #0fbcf9;
@@ -306,8 +307,20 @@ footer {
   font-weight: bold;
 }
 
-/* ----------- iPhone 6, 6S, 7 and 8 ----------- */
-@media screen and (min-width: 414px) and (max-device-width: 736px) {
+/* ----------- iPhone 4 and 4S ----------- */
+/* @media screen and (min-width: 320px) and (max-device-width: 480px) {
+} */
+
+/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+@media screen and (min-width: 320px) and (max-device-width: 568px) {
+  main {
+    padding: 10px 10px;
+  }
+
+  .card {
+    padding: 10px 10px;
+  }
+
   #aside-skills {
     width: 100%;
   }
@@ -322,19 +335,23 @@ footer {
   }
 
   header nav a {
-    padding-right: 5px;
-    padding-left: 5px;
-    font-size: 11px;
+    padding-right: 4px;
+    padding-left: 4px;
+    font-size: 8px;
   }
 
   .jumbotron {
-    padding: 20px 30px;
+    padding: 15px 20px;
+    font-size: 15px;
+  }
+
+  .jumbotron h1 {
+    font-size: 40px;
   }
 
   h2 {
-    margin-top: 50px;
     margin-bottom: 20px;
-    font-size: 30px;
+    font-size: 20px;
   }
 
   .container-photo img {
@@ -346,13 +363,29 @@ footer {
     margin-top: 15px;
   }
   .social img {
-    width: 25px;
+    width: 20px;
   }
 
   .table-biodata {
-    font-size: 12px;
-    margin-top: 15px;
-    line-height: 12px;
+    font-size: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+    line-height: 10px;
+  }
+
+  .download {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+  }
+  .button-download {
+    font-size: 7px;
+    padding: 5px 5px;
+  }
+
+  .button-download:hover {
+    background-color: #0984e3;
+    color: white;
   }
 
   .skill li {
@@ -363,36 +396,51 @@ footer {
     font-size: 10px;
   }
 
+  .table {
+    width: 100%;
+    margin-left: 0%;
+    margin-right: 0%;
+  }
+
   .table th {
-    font-size: 12px;
+    font-size: 10px;
   }
 
   .table td {
-    font-size: 10px;
+    font-size: 8px;
     text-align: left;
   }
 
   .project .content {
     width: 100%;
-    padding: 10px;
+    padding: 5px 10px;
   }
 
   .project img {
-    width: 20%;
+    width: 15%;
   }
 
   .project h4 {
-    font-size: 20px;
+    font-size: 15px;
     margin-top: 10px;
   }
 
   .project p {
     margin-top: 10px;
+    font-size: 10px;
   }
 
   .table-download td {
-    font-size: 12px;
-    padding-right: 5px;
+    font-size: 10px;
+    padding-right: 2px;
+  }
+
+  .table-download img {
+    width: 15px;
+  }
+
+  footer {
+    font-size: 10px;
   }
 }
 
@@ -514,6 +562,97 @@ footer {
   }
 }
 
+/* ----------- iPhone 6+, 6S+, 7+ and 8+ ----------- */
+@media screen and (min-width: 414px) and (max-device-width: 736px) {
+  #aside-skills {
+    width: 100%;
+  }
+
+  aside {
+    width: 100%;
+    padding: 0;
+  }
+
+  header nav ul {
+    padding-inline-start: 0px;
+  }
+
+  header nav a {
+    padding-right: 5px;
+    padding-left: 5px;
+    font-size: 11px;
+  }
+
+  .jumbotron {
+    padding: 20px 30px;
+  }
+
+  h2 {
+    margin-top: 50px;
+    margin-bottom: 20px;
+    font-size: 30px;
+  }
+
+  .container-photo img {
+    width: 150px;
+    border-radius: 25px;
+  }
+
+  .social ul {
+    margin-top: 15px;
+  }
+  .social img {
+    width: 25px;
+  }
+
+  .table-biodata {
+    font-size: 12px;
+    margin-top: 15px;
+    line-height: 12px;
+  }
+
+  .skill li {
+    font-size: 12px;
+  }
+
+  .skill li span {
+    font-size: 10px;
+  }
+
+  .table th {
+    font-size: 12px;
+  }
+
+  .table td {
+    font-size: 10px;
+    text-align: left;
+  }
+
+  .project .content {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .project img {
+    width: 20%;
+  }
+
+  .project h4 {
+    font-size: 20px;
+    margin-top: 10px;
+  }
+
+  .project p {
+    margin-top: 10px;
+  }
+
+  .table-download td {
+    font-size: 12px;
+    padding-right: 5px;
+  }
+}
+
+/* batas */
 /* medium devices (landscape tablets, min width 768px and up) */
 @media screen and (min-width: 768px) {
   #aside-skills {
