--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -12,6 +12,10 @@ body {
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
 .card {
   /* box-shadow : horizontal, vertical, tingkat kerubaman, spread, color */
   box-shadow: 0 4px 8px 0px gray;
@@ -42,7 +46,7 @@ body {
   padding: 40px 100px;
   background-color: #0984e3;
   text-align: center;
-  color: white;
+  color: #f1f2f6;
 }
 
 .jumbotron h1 {
@@ -65,6 +69,8 @@ nav {
   position: sticky;
   top: 0;
   text-align: center;
+  z-index: 10;
+  opacity: 0.9;
 }
 
 nav a {
@@ -74,11 +80,12 @@ nav a {
   display: inline-block;
   padding-right: 30px;
   padding-left: 30px;
-  color: white;
+  color: #f1f2f6;
 }
 nav .border {
-  border-right: 1px solid white;
+  border-right: 1px solid #f1f2f6;
 }
+
 nav li {
   display: inline;
   list-style-type: none;
@@ -87,8 +94,8 @@ nav li {
 
 nav a:hover {
   font-weight: bold;
-  background-color: white;
-  color: #4bcffa;
+  background-color: #f1f2f6;
+  color: #0fbcf9;
 }
 
 /* main & content */
@@ -114,7 +121,7 @@ aside {
 }
 
 h2 {
-  color: #0984e3;
+  color: #45aaf2;
   margin-left: 3%;
   margin-bottom: 30px;
   margin-top: 50px;
@@ -145,6 +152,11 @@ h2 {
 
 .social img {
   width: 30px;
+  opacity: 0.7;
+}
+
+.social img:hover {
+  opacity: 1;
 }
 
 .table-biodata {
@@ -158,34 +170,40 @@ h2 {
 
 .table-biodata td {
   padding-right: 15px;
+  color: #4b6584;
 }
 
 .label {
-  color: #0984e3;
-  font-weight: 500;
+  color: #4b6584;
+  font-weight: 600;
 }
 
 .download {
   text-align: left;
-  margin-top: 15px;
+  margin-top: 12px;
   margin-left: 20px;
+  margin-bottom: 12px;
 }
 .button-download {
   font-family: "Quicksand", Helvetica, sans-serif;
-  font-size: 10px;
-  font-weight: bold;
-  color: #0984e3;
+  font-size: 12px;
+  font-weight: 600;
+  color: white;
   padding: 5px 10px;
   border-radius: 5px;
-  transition: 0.4s;
-  border: 1px solid #0984e3;
-  background-color: white;
-  box-shadow: 0 1px 8px 0px gray;
+  opacity: 0.8;
+  background-color: #4fc3f7;
+  box-shadow: 0 6px #0984e3; /* horz vert color */
+}
+
+.button-download:active {
+  position: relative;
+  top: 6px;
+  box-shadow: none;
 }
 
 .button-download:hover {
-  background-color: #0984e3;
-  color: white;
+  opacity: 1;
 }
 
 /* styling skill */
@@ -199,7 +217,7 @@ h2 {
 
 .skill .content-skill {
   /* background-color: burlywood; */
-  color: grey;
+  color: #4b6584;
   border-radius: 5px;
 }
 
@@ -223,7 +241,7 @@ h2 {
 
 .skill .level {
   background-color: rgb(66, 107, 182);
-  color: white;
+  color: #f1f2f6;
   text-align: center;
   padding: 5px;
   margin-top: 10px;
@@ -243,13 +261,13 @@ h2 {
 
 .table th {
   background-color: rgb(66, 107, 182);
-  color: white;
+  color: #f1f2f6;
   padding: 10px 10px;
 }
 
 .table td {
   padding: 10px 10px;
-  color: rgb(7, 7, 7);
+  color: #4b6584;
 }
 
 .table .course {
@@ -257,7 +275,7 @@ h2 {
 }
 
 .table tr:nth-child(odd) {
-  background-color: rgb(209, 209, 209);
+  background-color: #cfd8dc;
 }
 
 .table tr:nth-child(even) {
@@ -292,511 +310,19 @@ h2 {
   font-size: 20px;
   margin-top: 20px;
   margin-bottom: 0px;
+  color: #4b6584;
 }
 .project p {
   text-align: justify;
+  color: #4b6584;
 }
 
 /* footer */
 footer {
   margin-top: 20px;
   padding: 5px;
-  color: white;
+  color: #f1f2f6;
   background-color: #0fbcf9;
   text-align: center;
   font-weight: bold;
-}
-
-/* ----------- iPhone 4 and 4S ----------- */
-/* @media screen and (min-width: 320px) and (max-device-width: 480px) {
-} */
-
-/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
-@media screen and (min-width: 320px) and (max-device-width: 568px) {
-  main {
-    padding: 10px 10px;
-  }
-
-  .card {
-    padding: 10px 10px;
-  }
-
-  #aside-skills {
-    width: 100%;
-  }
-
-  aside {
-    width: 100%;
-    padding: 0;
-  }
-
-  header nav ul {
-    padding-inline-start: 0px;
-  }
-
-  header nav a {
-    padding-right: 4px;
-    padding-left: 4px;
-    font-size: 8px;
-  }
-
-  .jumbotron {
-    padding: 15px 20px;
-    font-size: 15px;
-  }
-
-  .jumbotron h1 {
-    font-size: 40px;
-  }
-
-  h2 {
-    margin-bottom: 20px;
-    font-size: 20px;
-  }
-
-  .container-photo img {
-    width: 150px;
-    border-radius: 25px;
-  }
-
-  .social ul {
-    margin-top: 15px;
-  }
-  .social img {
-    width: 20px;
-  }
-
-  .table-biodata {
-    font-size: 10px;
-    margin-top: 10px;
-    margin-left: 10px;
-    line-height: 10px;
-  }
-
-  .download {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-  }
-  .button-download {
-    font-size: 7px;
-    padding: 5px 5px;
-  }
-
-  .button-download:hover {
-    background-color: #0984e3;
-    color: white;
-  }
-
-  .skill li {
-    font-size: 12px;
-  }
-
-  .skill li span {
-    font-size: 10px;
-  }
-
-  .table {
-    width: 100%;
-    margin-left: 0%;
-    margin-right: 0%;
-  }
-
-  .table th {
-    font-size: 10px;
-  }
-
-  .table td {
-    font-size: 8px;
-    text-align: left;
-  }
-
-  .project .content {
-    width: 100%;
-    padding: 5px 10px;
-  }
-
-  .project img {
-    width: 15%;
-  }
-
-  .project h4 {
-    font-size: 15px;
-    margin-top: 10px;
-  }
-
-  .project p {
-    margin-top: 10px;
-    font-size: 10px;
-  }
-
-  .table-download td {
-    font-size: 10px;
-    padding-right: 2px;
-  }
-
-  .table-download img {
-    width: 15px;
-  }
-
-  footer {
-    font-size: 10px;
-  }
-}
-
-/* ----------- iPhone 6, 6S, 7 and 8 ----------- */
-@media screen and (min-width: 375px) and (max-device-width: 667px) {
-  #aside-skills {
-    width: 100%;
-  }
-
-  aside {
-    width: 100%;
-    padding: 0;
-  }
-
-  header nav ul {
-    padding-inline-start: 0px;
-  }
-
-  header nav a {
-    padding-right: 5px;
-    padding-left: 5px;
-    font-size: 9px;
-  }
-
-  .jumbotron {
-    padding: 20px 25px;
-  }
-
-  h2 {
-    margin-top: 50px;
-    margin-bottom: 20px;
-    font-size: 25px;
-  }
-
-  .container-photo img {
-    width: 150px;
-    border-radius: 25px;
-  }
-
-  .social ul {
-    margin-top: 15px;
-  }
-  .social img {
-    width: 25px;
-  }
-
-  .table-biodata {
-    font-size: 12px;
-    margin-top: 15px;
-    line-height: 12px;
-  }
-
-  .download {
-    margin-top: 15px;
-    margin-bottom: 15px;
-  }
-  .button-download {
-    font-size: 8px;
-  }
-
-  .button-download:hover {
-    background-color: #0984e3;
-    color: white;
-  }
-
-  .skill li {
-    font-size: 12px;
-  }
-
-  .skill li span {
-    font-size: 10px;
-  }
-
-  .table {
-    width: 96%;
-    margin-left: 2%;
-    margin-right: 2%;
-  }
-
-  .table th {
-    font-size: 11px;
-  }
-
-  .table td {
-    font-size: 9px;
-    text-align: left;
-  }
-
-  .project .content {
-    width: 100%;
-    padding: 10px;
-  }
-
-  .project img {
-    width: 20%;
-  }
-
-  .project h4 {
-    font-size: 15px;
-    margin-top: 10px;
-  }
-
-  .project p {
-    margin-top: 10px;
-    font-size: 10px;
-  }
-
-  .table-download td {
-    font-size: 10px;
-    padding-right: 2px;
-  }
-
-  .table-download img {
-    width: 15px;
-  }
-
-  footer {
-    font-size: 10px;
-  }
-}
-
-/* ----------- iPhone 6+, 6S+, 7+ and 8+ ----------- */
-@media screen and (min-width: 414px) and (max-device-width: 736px) {
-  #aside-skills {
-    width: 100%;
-  }
-
-  aside {
-    width: 100%;
-    padding: 0;
-  }
-
-  header nav ul {
-    padding-inline-start: 0px;
-  }
-
-  header nav a {
-    padding-right: 5px;
-    padding-left: 5px;
-    font-size: 11px;
-  }
-
-  .jumbotron {
-    padding: 20px 30px;
-  }
-
-  h2 {
-    margin-top: 50px;
-    margin-bottom: 20px;
-    font-size: 30px;
-  }
-
-  .container-photo img {
-    width: 150px;
-    border-radius: 25px;
-  }
-
-  .social ul {
-    margin-top: 15px;
-  }
-  .social img {
-    width: 25px;
-  }
-
-  .table-biodata {
-    font-size: 12px;
-    margin-top: 15px;
-    line-height: 12px;
-  }
-
-  .skill li {
-    font-size: 12px;
-  }
-
-  .skill li span {
-    font-size: 10px;
-  }
-
-  .table th {
-    font-size: 12px;
-  }
-
-  .table td {
-    font-size: 10px;
-    text-align: left;
-  }
-
-  .project .content {
-    width: 100%;
-    padding: 10px;
-  }
-
-  .project img {
-    width: 20%;
-  }
-
-  .project h4 {
-    font-size: 20px;
-    margin-top: 10px;
-  }
-
-  .project p {
-    margin-top: 10px;
-  }
-
-  .table-download td {
-    font-size: 12px;
-    padding-right: 5px;
-  }
-}
-
-/* batas */
-/* medium devices (landscape tablets, min width 768px and up) */
-@media screen and (min-width: 768px) {
-  #aside-skills {
-    width: 100%;
-  }
-
-  aside {
-    width: 100%;
-    padding: 0;
-  }
-  header nav {
-    text-align: left;
-  }
-
-  header nav a {
-    padding-right: 10px;
-    padding-left: 10px;
-  }
-
-  .container-photo img {
-    width: 300px;
-    border-radius: 25px;
-  }
-
-  .social ul {
-    margin-top: 15px;
-  }
-  .social img {
-    width: 50px;
-    border-radius: 10px;
-  }
-
-  .profile .table-biodata {
-    font-size: 25px;
-    line-height: 25px;
-    margin-top: 25px;
-  }
-
-  .project .content {
-    width: 50%;
-    padding: 20px;
-  }
-
-  .project img {
-    width: 35%;
-  }
-
-  .project h4 {
-    font-size: 25px;
-    margin-top: 10px;
-  }
-
-  .project p {
-    margin-top: 10px;
-  }
-}
-
-/* larges devices (laptop, 992px and up) */
-@media screen and (min-width: 1024px) {
-  #aside-skills {
-    width: 100%;
-  }
-
-  aside {
-    width: 100%;
-    padding: 0;
-  }
-
-  header nav {
-    text-align: left;
-  }
-
-  header nav a {
-    padding-right: 30px;
-    padding-left: 30px;
-  }
-
-  .jumbotron {
-    padding: 25px;
-  }
-
-  .container-photo img {
-    width: 350px;
-  }
-
-  .social img {
-    width: 60px;
-    border-radius: 10px;
-  }
-
-  .profile .table-biodata {
-    font-size: 25px;
-    line-height: 25px;
-    margin-left: 60px;
-  }
-
-  .project .content {
-    width: 33%;
-    padding: 20px;
-  }
-}
-
-/* larges devices (laptop, 1200px and up) */
-@media screen and (min-width: 1200px) {
-  #aside-skills {
-    width: 65%;
-  }
-
-  aside {
-    width: 35%;
-    padding-right: 20px;
-  }
-
-  header nav {
-    text-align: center;
-  }
-
-  header nav a {
-    padding-right: 30px;
-    padding-left: 30px;
-  }
-
-  .jumbotron {
-    padding: 40px 100px;
-  }
-
-  .container-photo img {
-    width: 200px;
-  }
-
-  .social img {
-    width: 30px;
-    border-radius: 10px;
-  }
-
-  .profile .table-biodata {
-    font-size: 14px;
-    line-height: 20px;
-    margin-left: 20px;
-    margin-top: 10px;
-  }
-
-  .project .content {
-    width: 33%;
-    padding: 20px;
-  }
 }
